tests/cases/positive/units-inverse.frtl
y : Float[Unit[m]] = 2.0
x : Float[Unit[M]] = 1.0
it : Float[Unit[1]] = (x / y)