tests/cases/negative/label-conflict.frtl
x : Float[Unit[m]] = 1.0
y = label(x, Unit[s])
it = y